fixed bug where notifyCartChange was not imported, adjusted cart layout CSS to align qty and x button

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -137,9 +137,10 @@ p {
 button,
 #checkout-btn {
   height: 44px;
-  max-width: 160px;
+  max-width: 180px;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
   display: flex;
   margin-top: 1rem;
   padding: 0.75rem 2rem;
@@ -268,13 +269,14 @@ button:hover, #checkout-btn:hover {
 /* Start cart list card styles */
 .cart-card {
   display: grid;
-  grid-template-columns: 150px 1fr auto 2.5rem;
+  grid-template-columns: 150px 1fr 2.5rem;
   font-size: var(--small-font);
   /* max-height: 120px; */
   align-items: center;
   width: 100%;
   max-width: 1080px;
   padding: 1rem;
+  position: relative;
 }
 
 .cart-card-image {
@@ -284,9 +286,11 @@ button:hover, #checkout-btn:hover {
 
 .cart-card p {
   margin-top: 0;
+  padding-left: 1rem;
 }
 
 .cart-card .card-name {
+  padding-left: 1rem;
   grid-row: 1;
   grid-column: 2;
 }
@@ -307,8 +311,11 @@ button:hover, #checkout-btn:hover {
 }
 
 .cart-card-delete {
+  position: absolute;
   grid-row: 1/3;
   grid-column: 4;
+  right: 2.5rem;
+  top: 2.5rem;
   justify-self: end;
   align-self: center;
   color: red;
